vvm providers added to call settings

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -369,7 +369,7 @@
     <!-- Call settings screen, "Voicemail" provider setting summary text when no provider is selected -->
     <string name="sum_voicemail_choose_provider">Choose voicemail service</string>
     <!-- Call settings screen, "Voicemail" screen, default option - My Carrier -->
-    <string name="voicemail_default">My carrier</string>
+    <string name="voicemail_default">My Carrier</string>
 
     <!-- networks setting strings -->
     <!-- Mobile network settings screen title -->
@@ -1154,6 +1154,30 @@
 
     <!-- Prefix on the voicemail settings preference. The full string will be Settings for <provider name> -->
     <string name="voicemail_settings_for">Settings for <xliff:g id="provider_name">%s</xliff:g></string>
+
+    <!-- VVM providers title -->
+    <string name="other_providers">Visual voicemail providers</string>
+
+    <!-- Google Voice VVM Provider -->
+    <string name="title_vm_uses_googlevoice">Google</string>
+
+    <string name="summary_on_vm_uses_googlevoice">Google voice defaults are enabled</string>
+
+    <string name="summary_off_vm_uses_googlevoice">Google voice defaults are disabled</string>
+
+    <!-- Youmail VVM Provider -->
+    <string name="title_vm_uses_youmail">YouMail</string>
+
+    <string name="summary_on_vm_uses_youmail">Youmail defaults are enabled</string>
+
+    <string name="summary_off_vm_uses_youmail">Youmail defaults are disabled</string>
+
+    <!-- Verizon VVM Provider -->
+    <string name="title_vm_uses_verizon">Verizon</string>
+
+    <string name="summary_on_vm_uses_verizon">Verizon vvm defaults are enabled</string>
+
+    <string name="summary_off_vm_uses_verizon">Verizon vvm defaults are disabled</string>
 
     <!-- Title displayed above settings coming after voicemail in the call features screen -->
     <string name="other_settings">Other call settings</string>
